# Samuraizer

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: log_panel_overhaul_plan.md
samuraizer/: main.py
samuraizer-rust/: Cargo.toml
samuraizer-rust/src/: cache.rs  content.rs  errors.rs  ffi.rs  hashing.rs  lib.rs  mime.rs  traversal.rs
samuraizer/backend/analysis/: file_processor.py  hash_service.py
samuraizer/backend/cache/: cache_cleaner.py  cache_operations.py  cache_state.py  connection_pool.py
samuraizer/backend/output/: __init__.py  progressive_writer.py
samuraizer/backend/services/: config_services.py  pattern_service.py
samuraizer/cli/: parser.py
samuraizer/config/: __init__.py  compat.py  config_manager.py  defaults.py  events.py  exceptions.py  exclusion_config.py  facade.py  listener.py  listeners.py  llm_config.py  migration.py  profile_service.py  profiles.py  storage.py  timezone.py  timezone_config.py  timezone_service.py  toml_io.py  types.py  unified.py  utils.py  validation.py
samuraizer/core/: __init__.py  application.py  summary.py
samuraizer/gui/: __init__.py  main.py  types.py
samuraizer/gui/app/: __init__.py  application.py  (+3 more)
samuraizer/utils/: __init__.py  color_support.py  encoding_utils.py  legacy_cleanup.py  log_handler.py  time_utils.py  translations.py
tests/: test_async_stream.py  test_cli_parser_logging.py  test_config_refactor.py  test_hash_service.py  test_logging_service.py  test_mime_detection.py  test_native_backend.py
(+147 files in other folders)
