[package]
name = "samuraizer-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = []
libmagic = ["magic"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
walkdir = "2"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
encoding_rs = "0.8"
base64 = "0.22"
once_cell = "1"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
regex = "1"
globset = "0.4"
hashbrown = "0.14"
lru = "0.12"
crossbeam-channel = "0.5"
thiserror = "1"
log = "0.4"

[dependencies.magic]
version = "0.16"
optional = true

[package.metadata.maturin]
name = "samuraizer._native"
